--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.9.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-country-region-selector": "^3.1.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
@@ -23,7 +24,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
